Atualização na paleta de cores

--- a/Calculadora/public_html/index.html
+++ b/Calculadora/public_html/index.html
@@ -27,19 +27,19 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     .btn-50 {width: 50px;}
 </style>
 <body>
-    <div>
+    <div class="CalculadoraNome" style="margin-left: 10%;">
         <h1>Calculadora V1.0 - Fatec Bragança Paulista</h1>
     </div>
     <form>
         <div class="container" style="width: 26%; ">
             <div class="row">
-                <input class="col s11 right-align" style = "margin-left: 15px;" type="text" id="auxiliar" value="0" readonly="readonly" />
+                <input class="col s11 right-align" style = "font-size: 30px; color: black; margin-left: 15px;" type="text" id="auxiliar" value="0" readonly="readonly" />
             </div>
             <div class="row">
-                <input class="col s11 right-align" style = "margin-left: 15px;" type="text" id="display" value="0" readonly="readonly" />
+                <input class="col s11 right-align" style = "font-size: 30px; color: black; margin-left: 15px;" type="text" id="display" value="0" readonly="readonly" />
             </div>
             <div class="row">
-                <input class="col s11 center-align" style = "margin-left: 15px;" type="text" id="operador" value="" readonly="readonly" />
+                <input class="col s1 center-align" style = "font-size: 30px; color: black; margin-left: 15px;" type="text" id="operador" value="" readonly="readonly" />
             </div>
 
 
